maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:9: error: not found: value x
        x=i
        ^JediEscaper:15: error: not found: value x
setIndication(x,y,0)
              ^JediEscaper:21: error: missing arguments for method aMurNord in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
    if (!aMurNord && v!=9999 && getIndication(x,y-1)>=v && getIndication(x,y-1)<9999) { 
         ^JediEscaper:24: error: missing arguments for method aMurOuest in class JediEscaper;
follow this method with `_' if you want to treat it as a partially applied function
		if (!aMurOuest && v!=9999 && getIndication(x-1,y)>=v && getIndication(x-1,y)<9999) {
                     ^JediEscaper:28: error: type mismatch;
 found   : (x: Double)Double <and> (x: Float)Float <and> (x: Long)Long <and> (x: Int)Int <and> (x: Char)Int <and> (x: Short)Int <and> (x: Byte)Int <and> (x: String)String
 required: Int
      setIndication(x,y+,v+1)
                       ^JediEscaper:37: error: not found: value getIndiction
      if (getIndiction(l,c)!=9999){
          ^